[gd_scene load_steps=2 format=3 uid="uid://bfum4iq3si2lf"]

[ext_resource type="Script" uid="uid://dxa42qn2qcim3" path="res://scenes/ui/abilities_display/abilities_display.gd" id="1_8f0eq"]

[node name="AbilitiesDisplay" type="CanvasLayer"]
script = ExtResource("1_8f0eq")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -265.0
offset_top = -48.0
offset_right = 265.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 77

[node name="WeaponsContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Weapon1" type="PanelContainer" parent="CenterContainer/HBoxContainer/WeaponsContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/WeaponsContainer/Weapon1"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/WeaponsContainer/Weapon1/TextureRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
text = "1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Weapon2" type="PanelContainer" parent="CenterContainer/HBoxContainer/WeaponsContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/HBoxContainer/WeaponsContainer/Weapon2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/WeaponsContainer/Weapon2/TextureRect2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="Weapon3" type="PanelContainer" parent="CenterContainer/HBoxContainer/WeaponsContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect3" type="TextureRect" parent="CenterContainer/HBoxContainer/WeaponsContainer/Weapon3"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/WeaponsContainer/Weapon3/TextureRect3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="Weapon4" type="PanelContainer" parent="CenterContainer/HBoxContainer/WeaponsContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect4" type="TextureRect" parent="CenterContainer/HBoxContainer/WeaponsContainer/Weapon4"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/WeaponsContainer/Weapon4/TextureRect4"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="PowerUpsContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PowerUp1" type="PanelContainer" parent="CenterContainer/HBoxContainer/PowerUpsContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect5" type="TextureRect" parent="CenterContainer/HBoxContainer/PowerUpsContainer/PowerUp1"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/PowerUpsContainer/PowerUp1/TextureRect5"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="PowerUp2" type="PanelContainer" parent="CenterContainer/HBoxContainer/PowerUpsContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect6" type="TextureRect" parent="CenterContainer/HBoxContainer/PowerUpsContainer/PowerUp2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/PowerUpsContainer/PowerUp2/TextureRect6"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="PowerUp3" type="PanelContainer" parent="CenterContainer/HBoxContainer/PowerUpsContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect7" type="TextureRect" parent="CenterContainer/HBoxContainer/PowerUpsContainer/PowerUp3"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/PowerUpsContainer/PowerUp3/TextureRect7"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="PowerUp4" type="PanelContainer" parent="CenterContainer/HBoxContainer/PowerUpsContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect8" type="TextureRect" parent="CenterContainer/HBoxContainer/PowerUpsContainer/PowerUp4"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/PowerUpsContainer/PowerUp4/TextureRect8"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="BoostersContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Booster1" type="PanelContainer" parent="CenterContainer/HBoxContainer/BoostersContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect9" type="TextureRect" parent="CenterContainer/HBoxContainer/BoostersContainer/Booster1"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/BoostersContainer/Booster1/TextureRect9"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="Booster2" type="PanelContainer" parent="CenterContainer/HBoxContainer/BoostersContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect10" type="TextureRect" parent="CenterContainer/HBoxContainer/BoostersContainer/Booster2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/BoostersContainer/Booster2/TextureRect10"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="Booster3" type="PanelContainer" parent="CenterContainer/HBoxContainer/BoostersContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect11" type="TextureRect" parent="CenterContainer/HBoxContainer/BoostersContainer/Booster3"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/BoostersContainer/Booster3/TextureRect11"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="Booster4" type="PanelContainer" parent="CenterContainer/HBoxContainer/BoostersContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect12" type="TextureRect" parent="CenterContainer/HBoxContainer/BoostersContainer/Booster4"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/BoostersContainer/Booster4/TextureRect12"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 2
